Attempt fix for background image rendering on iOS

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -240,6 +240,7 @@ i {
     background-position: center;
     background-repeat: no-repeat;
     background-attachment: fixed;
+    background-size: cover;
   }
 
   #cardTitle {
